JG-2002-12-10-0  Enhancem.  Create separate libraries for different spooling
                            methods.
                 Bugfix:    Fixed broken build for creation of shared SGE libs.

EB-2002-12-09-0  Bugfix:    qstat -j shows messages concerning queues although 
                            schedd_job_info=false
                            sge_schedd process consumes more memory than needed
                            if schedd_job_info=true
                            Job notification signals won't be delivered if 
                            user redefines suspend_method or terminate_method
                 IZ:        #432 #435 #436
                 Bugtraq:   #4787598 #4790540 #4790547

CR-2002-12-09-1  Testsuite: migration test now L10N compatible

CR-2002-12-09-0  Testsuite: Removing evtl. existing access lists in 
                            install_core_system check 

CR-2002-12-06-2  Testsuite: Fixed bug in submit_del test ( running on system
                 Bugfix:    with large queue count will report errors on 
                            starup )

CR-2002-12-06-1  Testsuite: Fixed bug in access_lists test for sge systems
                 Bugfix:

CR-2002-12-06-0  Testsuite: - Setting shared library path in start_remote_prog()
                            - Changed parameter settings for some tests

JG-2002-12-05-0  Bugfix:    Script submission for qrsh broke tight integration.

CR-2002-12-05-1  Testsuite: fixed errors in error_states check and complex
                 Bugfix:    check

CR-2002-12-05-0  Bugfix:    Used wrong macro (SFQ) for fixing messages macros 
                            in commit CR-2002-12-03-1

CR-2002-12-04-0  Testsuite: Running more than one testsuite on the same host
                 Bugfix:    causes problems, because both testsuites will use
                            same files in local /tmp directory
                            - new procedures: get_tmp_directory_name() and