@@ -15,11 +15,11 @@
 #define yyrestart spool_restart
 #define yytext spool_text
 
-#line 19 "../libs/spool/sge_spooling_flatfile_scanner.c"
+#line 19 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.c"
 /* A lexical scanner generated by flex */
 
 /* Scanner skeleton version:
- * $Header: /home/nfs/collabnet/CVSROOT/gridengine/source/libs/spool/flatfile/sge_spooling_flatfile_scanner.c,v 1.1 2002/12/10 13:38:16 joga Exp $
+ * $Header: /home/nfs/collabnet/CVSROOT/gridengine/source/libs/spool/flatfile/sge_spooling_flatfile_scanner.c,v 1.2 2002/12/11 12:16:13 ernst Exp $
  */
 
 #define FLEX_SCANNER
@@ -400,10 +400,10 @@ static char *yy_last_accepting_cpos;
 #define YY_MORE_ADJ 0
 #define YY_RESTORE_YY_MORE_OFFSET
 char *yytext;
-#line 1 "../libs/spool/sge_spooling_flatfile_scanner.l"
+#line 1 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.l"
 #define INITIAL 0
 /* scanner for Grid Engine ascii spool format */
-#line 7 "../libs/spool/sge_spooling_flatfile_scanner.l"
+#line 7 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.l"
 /* need this for the call to atof() below */
 #include <stdlib.h>
 #include <math.h>
@@ -429,7 +429,7 @@ void spool_scanner_shutdown(void)
    spool__delete_buffer(YY_CURRENT_BUFFER);
 }
 
-#line 433 "../libs/spool/sge_spooling_flatfile_scanner.c"
+#line 433 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.c"
 
 /* Macros after this point can all be overridden by user definitions in
  * section 1.
@@ -580,10 +580,10 @@ YY_DECL
 	register char *yy_cp, *yy_bp;
 	register int yy_act;
 
-#line 41 "../libs/spool/sge_spooling_flatfile_scanner.l"
+#line 41 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.l"
 
 
-#line 587 "../libs/spool/sge_spooling_flatfile_scanner.c"
+#line 587 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.c"
 
 	if ( yy_init )
 		{
@@ -668,47 +668,47 @@ do_action:	/* This label is used only to access EOF actions. */
 
 case 1:
 YY_RULE_SETUP
-#line 43 "../libs/spool/sge_spooling_flatfile_scanner.l"
+#line 43 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.l"
 return SPFT_TIME;
 	YY_BREAK
 case 2:
 YY_RULE_SETUP
-#line 45 "../libs/spool/sge_spooling_flatfile_scanner.l"
+#line 45 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.l"
 return SPFT_INT; /* JG: TODO: handle negative */
 	YY_BREAK
 case 3:
 YY_RULE_SETUP
-#line 47 "../libs/spool/sge_spooling_flatfile_scanner.l"
+#line 47 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.l"
 return SPFT_FLOAT; /* JG: TODO: handle negative */
 	YY_BREAK
 case 4:
 YY_RULE_SETUP
-#line 49 "../libs/spool/sge_spooling_flatfile_scanner.l"
+#line 49 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.l"
 return SPFT_RANGE;
 	YY_BREAK
 case 5:
 YY_RULE_SETUP
-#line 51 "../libs/spool/sge_spooling_flatfile_scanner.l"
+#line 51 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.l"
 return SPFT_COMPOP;
 	YY_BREAK
 case 6:
 YY_RULE_SETUP
-#line 53 "../libs/spool/sge_spooling_flatfile_scanner.l"
+#line 53 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.l"
 return SPFT_DELIMITER;
 	YY_BREAK
 case 7:
 YY_RULE_SETUP
-#line 55 "../libs/spool/sge_spooling_flatfile_scanner.l"
+#line 55 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.l"
 return SPFT_WORD;
 	YY_BREAK
 case 8:
 YY_RULE_SETUP
-#line 57 "../libs/spool/sge_spooling_flatfile_scanner.l"
+#line 57 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.l"
 spool_line++; break;       /* eat up comments */
 	YY_BREAK
 case 9:
 YY_RULE_SETUP
-#line 59 "../libs/spool/sge_spooling_flatfile_scanner.l"
+#line 59 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.l"
 { 
                   /* JG: TODO: has to be initialized for each scan run */
                   spool_line++; 
@@ -717,7 +717,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 10:
 YY_RULE_SETUP
-#line 65 "../libs/spool/sge_spooling_flatfile_scanner.l"
+#line 65 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.l"
 { /* whitespace */
                   if(spool_return_whitespace) {
                      strcpy(spool_text, " ");
@@ -729,15 +729,15 @@ YY_RULE_SETUP
 	YY_BREAK
 case 11:
 YY_RULE_SETUP
-#line 74 "../libs/spool/sge_spooling_flatfile_scanner.l"
+#line 74 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.l"
 return SPFT_UNKNOWN;
 	YY_BREAK
 case 12:
 YY_RULE_SETUP
-#line 76 "../libs/spool/sge_spooling_flatfile_scanner.l"
+#line 76 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.l"
 ECHO;
 	YY_BREAK
-#line 741 "../libs/spool/sge_spooling_flatfile_scanner.c"
+#line 741 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.c"
 case YY_STATE_EOF(INITIAL):
 	yyterminate();
 
@@ -1303,7 +1303,7 @@ YY_BUFFER_STATE b;
 
 #ifndef YY_ALWAYS_INTERACTIVE
 #ifndef YY_NEVER_INTERACTIVE
-extern int isatty YY_PROTO(( int ));
+#include<unistd.h>
 #endif
 #endif
 
@@ -1623,7 +1623,7 @@ int main()
 	return 0;
 	}
 #endif
-#line 76 "../libs/spool/sge_spooling_flatfile_scanner.l"
+#line 76 "../libs/spool/flatfile/sge_spooling_flatfile_scanner.l"
 
 
 #if 0
