@@ -1,3 +1,9 @@
+EB-2002-12-10-0  Bugfix:    job logging file exists but is empty in certain
+                            configurations
+                 IZ:        #439
+                 Bugtraq:   #4791908
+                 Review:    AS
+
 JG-2002-12-10-0  Enhancem.  Create separate libraries for different spooling
                             methods.
                  Bugfix:    Fixed broken build for creation of shared SGE libs.
@@ -10,6 +16,7 @@ EB-2002-12-09-0  Bugfix:    qstat -j shows messages concerning queues although
                             user redefines suspend_method or terminate_method
                  IZ:        #432 #435 #436
                  Bugtraq:   #4787598 #4790540 #4790547
+                 Review:    JG
 
 CR-2002-12-09-1  Testsuite: migration test now L10N compatible
 
